--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ invoke = "^1.7.0"
 mkdocs = "^1.3.0"
 pylint = "^2.13.0"
 pydocstyle = "^6.1.0"
+toml = "^0.10"
+
+[tool.bandit]
+exclude_dirs = [".venv"]
 
 [tool.black]
 line-length = 120
